# gp-connect-user-permissions

./: .editorconfig  .gitignore  Makefile  README.md  ecs-proxies-containers.yml  manifest_template.yml  openapi.json  package-lock.json  package.json  pyproject.toml  test-report.xml
.github/workflows/: continuous-disintegration.yml  continuous-integration.yml
PrismMockProvider/: Dockerfile  Makefile
PrismMockReceiver/: .gitignore  gp-connect-user-permissions.json
azure/: azure-build-pipeline.yml  azure-pr-pipeline.yml  azure-pr-teardown-pipeline.yml  azure-release-pipeline.yml  project.yml
azure/templates/: post-deploy.yml  push-mock-receiver-image.yml  remove-kvm-entry.yml  run-tests.yml
infra/: Makefile  README.md  subnets.tf  vpc.tf  vpc_endpoints.tf  vpc_link.tf
infra/vpc_endpoints/: security_groups.tf  vpc_endpoints.tf
mock-receiver/: Dockerfile  Makefile
mock_provider/: .gitignore  Dockerfile  HealthStatusEndpoint.json  Makefile
mock_provider/auth/: Dockerfile
sandbox/: app.js  app.spec.js  package-lock.json  package.json
scripts/: apigee_kvm.py  check_python_licenses.sh  destroy_unused_workspaces.py  generate_examples.py  generate_postman_collection.sh  tag-versions.sh
specification/: gp-connect-user-permissions.yaml  old.yaml
specification/components/: examples.yaml  requestBodies.yaml  schemas.yaml
terraform/: .terraform.lock.hcl  Makefile  api.tf  infra.tf  mock_provider.tf
terraform/alb/: logs.tf
terraform/api/: api.tf  iam.tf  lambda.tf  logs.tf  route53.tf
terraform/cluster/: ecs-logger.tf
terraform/mock-provider/: container_image.tf  (+2 more)
tests/: Makefile  example_loader.py  pytest.ini  test_endpoints.py  test_mock_provider.py  test_mock_provider_int.py
(+138 files in other folders)
