[tool.poetry]
name = "gp-connect-user-permissions"
version = "0.0.1-alpha"
description = "TODO"
authors = [
    #TODO add authors
]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/gp-connect-user-permissions"
homepage = "https://github.com/NHSDigital/gp-connect-user-permissions"
keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords


[tool.poetry.dependencies]
python = "^3.13"
pytest-nhsd-apim = "^5.0.14"
gitpython = "^3.1.43"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
pip-licenses = "^4.5.0"
jinja2 = "^3.1.6"
pyyaml = "^6.0.3"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^3.0"
gitpython = "^3.1.43"
pytest = "^8.3.1"
coverage = "^5.5"
aiohttp = "^3.8.5"
pytest-asyncio = "^0.14.0"

[tool.poetry.scripts]
